crates/parsing/src/grammar_redux/snapshots/parsing__grammar_redux__tests__expect_parse@export-list-empty.purs.snap
---
source: crates/parsing/src/grammar_redux/tests.rs
expression: result
input_file: crates/parsing/src/grammar_redux/inputs/module/export-list-empty.purs
---
Input: module Main () where

Start { kind: Module }
  Start { kind: ModuleHeader }
    Token { kind: ModuleKw }
    Start { kind: ModuleName }
      Start { kind: Name }
        Token { kind: Upper }
      Finish
    Finish
    Start { kind: ExportList }
      Token { kind: LeftParenthesis }
      Token { kind: RightParenthesis }
    Finish
    Token { kind: WhereKw }
  Finish
Finish
