crates/parsing/src/grammar_redux/snapshots/parsing__grammar_redux__tests__expect_parse@export-list-mismatch.purs.snap
---
source: crates/parsing/src/grammar_redux/tests.rs
expression: result
input_file: crates/parsing/src/grammar_redux/inputs/module/export-list-mismatch.purs
---
Input: module Main (value] where

Start { kind: Module }
  Start { kind: ModuleHeader }
    Token { kind: ModuleKw }
    Start { kind: ModuleName }
      Start { kind: Name }
        Token { kind: Upper }
      Finish
    Finish
    Start { kind: ExportList }
      Token { kind: LeftParenthesis }
      Start { kind: Name }
        Token { kind: Lower }
      Finish
      Start { kind: Error }
        Token { kind: RightSquare }
        Error { message: "expected a comma" }
      Finish
      Error { message: "unexpected end" }
      Error { message: "expected RightParenthesis" }
    Finish
    Token { kind: WhereKw }
  Finish
Finish
