crates/parsing/src/grammar_redux/snapshots/parsing__grammar_redux__tests__expect_parse@name-invalid-separator.purs.snap
---
source: crates/parsing/src/grammar_redux/tests.rs
expression: result
input_file: crates/parsing/src/grammar_redux/inputs/module/name-invalid-separator.purs
---
Input: module invalid,separator where

Start { kind: Module }
  Start { kind: ModuleHeader }
    Token { kind: ModuleKw }
    Start { kind: ModuleName }
      Start { kind: Error }
        Token { kind: Lower }
        Error { message: "expected a module name" }
      Finish
      Start { kind: Error }
        Token { kind: Comma }
        Error { message: "expected a period" }
      Finish
      Start { kind: Error }
        Token { kind: Lower }
        Error { message: "expected a module name" }
      Finish
    Finish
    Token { kind: WhereKw }
  Finish
Finish
