crates/parsing/src/grammar_redux/snapshots/parsing__grammar_redux__tests__expect_parse@name-missing-tail.purs.snap
---
source: crates/parsing/src/grammar_redux/tests.rs
expression: result
input_file: crates/parsing/src/grammar_redux/inputs/module/name-missing-tail.purs
---
Input: module Main. where

Start { kind: Module }
  Start { kind: ModuleHeader }
    Token { kind: ModuleKw }
    Start { kind: ModuleName }
      Start { kind: Name }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
      Error { message: "expected a module name" }
    Finish
    Token { kind: WhereKw }
  Finish
Finish
