crates/parsing/src/grammar_redux/snapshots/parsing__grammar_redux__tests__expect_parse@name-period-period.purs.snap
---
source: crates/parsing/src/grammar_redux/tests.rs
expression: result
input_file: crates/parsing/src/grammar_redux/inputs/module/name-period-period.purs
---
Input: module Main. . where

Start { kind: Module }
  Start { kind: ModuleHeader }
    Token { kind: ModuleKw }
    Start { kind: ModuleName }
      Start { kind: Name }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
      Start { kind: Error }
        Token { kind: Period }
        Error { message: "expected a module name" }
      Finish
    Finish
    Token { kind: WhereKw }
  Finish
Finish
